objects/maps__Route__c.object
<CustomObject>
    <fields>
        <fullName>db_days_maps_Date__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>maps_Date__c db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__Options__c</fullName>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__TravelDistance__c</fullName>
        <label>Travel Distance (Miles)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TravelTime__c</fullName>
        <label>Travel Time (Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Maps_Routes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Route</label>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>